# stub-tracker

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  flake8spell_allow.txt  mypy.ini  pyproject.toml
stub_tracker/: __init__.py  __main__.py
test-scripts/: test.py
test-scripts/submod/: thing.py
test-stubs/: test.pyi
